# hyprsysteminfo

./: .gitignore  CMakeLists.txt  README.md  flake.nix
assets/install/: hyprsysteminfo.desktop
nix/: default.nix  overlays.nix  shell.nix
qml/: main.qml
qmlSources/: SystemIconProvider.hpp  SystemInternals.cpp  SystemInternals.hpp
src/: CMakeLists.txt  SystemIconProvider.cpp  SystemIconProvider.hpp  SystemInfo.cpp  SystemInfo.hpp  WaylandScreen.cpp  WaylandScreen.hpp  main.cpp  main.qml
src/helpers/: Memory.hpp
src/icons/: Icons.hpp
src/util/: Utils.cpp  Utils.hpp
src/utils/: HyprlandIPC.cpp  HyprlandIPC.hpp  SystemInfo.cpp  SystemInfo.hpp
